# aggcat

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/workflows/: ci.yml
aggcat/: cli.py  config.py  pipeline.py  report.py
aggcat/static/: analyzer.py  utils.py  visitors.py
src/: analyzer.py  base_composite.py  base_tool.py  cli.py  config.py  pipeline.py  report.py
src/composites/: bandit_risk.py  hotspots.py  truck_factor.py  uncovered_complex.py
src/static/: analyzer.py  visitors.py
src/tools/: ast_nesting_tool.py  bandit_tool.py  cloc_tool.py  coupling_tool.py  coverage_tool.py  flake8_tool.py  github_tool.py  gitpython_tool.py  lizard_tool.py  pip_audit_tool.py  pydriller_tool.py  radon_tool.py  treesitter_tool.py  utils.py  vulture_tool.py
tests/: conftest.py  test_cli.py  test_infrastructure.py  test_pipeline.py  test_report.py  test_static.py
tests/composites/: test_bandit_risk.py  test_hotspots.py  test_truck_factor.py  test_uncovered_complex.py
tests/tools/: test_ast_nesting.py  test_bandit.py  test_cloc.py  test_coupling.py  test_coverage.py  test_flake8.py  test_github.py  test_gitpython.py  test_lizard.py  test_pip_audit.py  test_pydriller.py  test_radon.py  test_treesitter.py  test_vulture.py
